--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,23 +49,7 @@ layout: default
                 </span>
                                     </div>
     </div>
-</div>                     
-			
-                <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
-                    <div class="col"> 
-                                <i class="fas fa-book bigicon pt-3 pb-3"></i> 
-			    <p class="tag">Strategy</p> 
-                    </div>                     
-                    <div class="col"> 
-                        <p class="tag">Strategy</p> 
-                    </div>                     
-                    <div class="col"> 
-                        <p class="tag">RPG</p> 
-                    </div>                     
-                    <div class="col"> 
-                        <p class="tag">Political Simulator</p> 
-                    </div>                     
-                </div>                 
+</div>                               
 
   <div class="container">
                 <div class="row"> 
@@ -101,6 +85,19 @@ layout: default
                     </div>                     
 	  	</div>
 	</div>
+	  
+	                  <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
+                    <div class="col"> 
+                                <i class="fas fa-book bigicon"></i> 
+			    <p class="tag">Interactive Fiction</p> 
+                    </div>                     
+                    <div class="col"> 
+                        <p class="tag">Strategy</p> 
+                    </div>                     
+                    <div class="col"> 
+                        <p class="tag">Political Simulator</p> 
+                    </div>                     
+                </div>       
            
 <div class="container">
     <div class="row">
