--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,7 +52,7 @@ layout: default
 </div>                               
 
   <div class="container">
-                <div class="row"> 
+                <div class="row mt-3"> 
                     <div class="col-md-4 mb-3 mb-md-5"> 
                           <div class="card py-4 h-100"> 
                              <div class="card-body text-center"> 
