--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -86,6 +86,10 @@ layout: default
 	  	</div>
 	</div>
 	  
+	  <div class="container-fluid">
+  dasaadd
+</div>
+	  
 	                  <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
                     <div class="col"> 
                                 <i class="fas fa-book bigicon"></i> 
