--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -86,7 +86,7 @@ layout: default
 	  	</div>
 	</div>
 	  
-	  <div class="container-fluid">
+	  <div class="container-fluid" style="background-color:white">
   dasaadd
 </div>
 	  
