--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -86,8 +86,17 @@ layout: default
 	  	</div>
 	</div>
 	  
-	  <div class="container-fluid" style="background-color:white">
+	  <div class="container-fluid" style="background-color:#fdb245;">
   dasaadd
+		  gdfgd
+		  dgdf
+		  gdfg
+		  dg
+		  d
+		  dg
+		  f
+		  d
+		  gf
 </div>
 	  
 	                  <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
