--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -86,17 +86,17 @@ layout: default
 	  	</div>
 	</div>
 	  
-	  <div class="container-fluid" style="background-color:#fdb245;">
+	  <div class="container-fluid" style="background-color:#fff;">
   dasaadd
-		  gdfgd
-		  dgdf
-		  gdfg
+		  <p>gdfgd
+		  dgdf<p>
+		  gdfg<p>
 		  dg
-		  d
+		  d<p>
 		  dg
-		  f
-		  d
-		  gf
+		  f<p>
+		  d<p>
+		  gf<p>
 </div>
 	  
 	                  <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
