--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -79,7 +79,7 @@ layout: default
                                 <i class="fas fa-capsules bigicon pt-3 pb-3"></i> 
                                 <h4 class="text-uppercase medium m-3 text-gold">BORDERLINE ADDICTIVE</h4> 
                                 <hr class="my-3" color="#FBC403"> 
-                                <div class="small text-gold">Find yourself starting over and over again as you look for new approaches to governance that would not lead you to the crossroads of equally unfavorable alternatives.</div>                                 
+                                <div class="small text-gold">Find yourself starting over and over again as you look for new approaches to governance that would not lead you to crossroads of equally unfavorable alternatives.</div>                                 
                             </div>                             
                         </div>                         
                     </div>                     
