--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -86,17 +86,37 @@ layout: default
 	  	</div>
 	</div>
 	  
-	  <div class="container-fluid" style="background-color:#fff;">
-  dasaadd
-		  <p>gdfgd
-		  dgdf<p>
-		  gdfg<p>
-		  dg
-		  d<p>
-		  dg
-		  f<p>
-		  d<p>
-		  gf<p>
+	  <div class="container">
+  <div class="row">
+    <div class="col align-self-start">
+      One of three columns
+    </div>
+    <div class="col align-self-end">
+      One of three columns
+    </div>
+  </div>
+</div>
+	  
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col col-lg-2">
+      1 of 3
+    </div>
+    <div class="col-md-auto">
+      Variable width content
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col-md-auto">
+      Variable width content
+    </div>
+    <div class="col col-lg-2">
+      3 of 3
+    </div>
+  </div>
 </div>
 	  
 	                  <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
