--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,7 +19,7 @@
           {% if page.url == "/press-kit.html" %}
           <a class="nav-link" href="{{"/about" | relative_url }}">FAQ</a>
           {% else %}
-          <a class="nav-link" href="{{"/press-kit" | relative_url }}">Press-Kit</a>
+          <a class="nav-link" href="{{"/" | relative_url }}">Press-Kit</a>
           {% endif %}
         </li>
         <li class="nav-item">
