--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -86,21 +86,11 @@ layout: default
 	  	</div>
 	</div>
 	  
-	  <div class="container">
-  <div class="row">
-    <div class="col align-self-start">
-      One of three columns
-    </div>
-    <div class="col align-self-end">
-      One of three columns
-    </div>
-  </div>
-</div>
-	  
+<!--  
 <div class="container">
   <div class="row justify-content-md-center">
     <div class="col col-lg-2 bg-light">
-      Join us!
+      Join the discord!
 	    
     </div>
     <div class="col-md-auto">
@@ -119,16 +109,17 @@ layout: default
     </div>
   </div>
 </div>
+-->
 	  
 	                  <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
-                    <div class="col"> 
+                    <div class="col bg-light"> 
                                 <i class="fas fa-book bigicon"></i> 
 			    <p class="tag">Interactive Fiction</p> 
                     </div>                     
-                    <div class="col"> 
+                    <div class="col bg-light"> 
                         <p class="tag">Strategy</p> 
                     </div>                     
-                    <div class="col"> 
+                    <div class="col bg-light"> 
                         <p class="tag">Political Simulator</p> 
                     </div>                     
                 </div>       
