--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -112,15 +112,15 @@ layout: default
 -->
 	  
 	                  <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
-                    <div class="col bg-light"> 
+                    <div class="col"> 
                                 <i class="fas fa-book bigicon"></i> 
-			    <p class="tag">Interactive Fiction</p> 
+			    <p class="tag bg-light">Interactive Fiction</p> 
                     </div>                     
-                    <div class="col bg-light"> 
-                        <p class="tag">Strategy</p> 
+                    <div class="col"> 
+                        <p class="tag bg-light">Strategy</p> 
                     </div>                     
-                    <div class="col bg-light"> 
-                        <p class="tag">Political Simulator</p> 
+                    <div class="col"> 
+                        <p class="tag bg-light">Political Simulator</p> 
                     </div>                     
                 </div>       
            
