--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,7 +23,7 @@
           {% endif %}
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/contact" | relative_url }}">Contact/Jobs</a>
+          <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
         </li>
       </ul>
     </div>
