--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -112,14 +112,14 @@ layout: default
 -->
 	  
 	                  <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
-                    <div class="col"> 
+                    <div class="col-md-auto"> 
                                 <i class="fas fa-book bigicon"></i> 
 			    <p class="tag bg-light">Interactive Fiction</p> 
                     </div>                     
-                    <div class="col"> 
+                    <div class="col-md-auto"> 
                         <p class="tag bg-light">Strategy</p> 
                     </div>                     
-                    <div class="col"> 
+                    <div class="col-md-auto"> 
                         <p class="tag bg-light">Political Simulator</p> 
                     </div>                     
                 </div>       
