--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -113,14 +113,13 @@ layout: default
 	  
 	                  <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
                     <div class="col-md-auto"> 
-                                <i class="fas fa-book bigicon"></i> 
-			    <p class="tag bg-light">Interactive Fiction</p> 
+			    <p class="tag bg-dark">Interactive Fiction</p> 
                     </div>                     
                     <div class="col-md-auto"> 
-                        <p class="tag bg-light">Strategy</p> 
+                        <p class="tag bg-dark">Strategy</p> 
                     </div>                     
                     <div class="col-md-auto"> 
-                        <p class="tag bg-light">Political Simulator</p> 
+                        <p class="tag bg-dark">Political Simulator</p> 
                     </div>                     
                 </div>       
            
