--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -111,7 +111,7 @@ layout: default
 </div>
 -->
 	  
-	                  <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
+	                  <div class="row no-gutter mt-4 col-lg-8 mx-auto text-center"> 
                     <div class="col-md-auto" style="background-color: rgba(0, 0, 0);"> 
 			    <p class="tag text-gold">Interactive Fiction</p> 
                     </div>                     
