--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -112,14 +112,14 @@ layout: default
 -->
 	  
 	                  <div class="row no-gutter mt-4 col-lg-8 mx-auto text-center"> 
-                    <div class="col-md-auto" style="background-color: rgba(0, 0, 0);"> 
-			    <p class="tag text-gold">Interactive Fiction</p> 
+                    <div class="col-md-auto"> 
+			    <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Interactive Fiction</p> 
                     </div>                     
-                    <div class="col-md-auto" style="background-color: rgba(0, 0, 0);"> 
-                        <p class="tag text-gold">Strategy</p> 
+                    <div class="col-md-auto"> 
+                        <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Strategy</p> 
                     </div>                     
-                    <div class="col-md-auto" style="background-color: rgba(0, 0, 0);"> 
-                        <p class="tag text-gold">Political Simulator</p> 
+                    <div class="col-md-auto"> 
+                        <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Political Simulator</p> 
                     </div>                     
                 </div>       
            
