--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -116,6 +116,12 @@ layout: default
 			    <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Interactive Fiction</p> 
                     </div>                     
                     <div class="col-md-auto"> 
+                        <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Choose Your Own Adventure</p> 
+                    </div>  
+                    <div class="col-md-auto"> 
+                        <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Narrative Adventure</p> 
+                    </div>  
+                    <div class="col-md-auto"> 
                         <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Strategy</p> 
                     </div>                     
                     <div class="col-md-auto"> 
