--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -111,8 +111,8 @@ layout: default
 </div>
 -->
 	  
-	                  <div class="row no-gutter mt-4 col-lg-8 mx-auto text-center"> 
-                    <div class="col-md-auto"> 
+	                  <div class="row no-gutter mt-0 col-lg-8 mx-auto text-center"> 
+                    <div class="col-md-2"> 
 			    <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Interactive Fiction</p> 
                     </div>                     
                     <div class="col-md-auto"> 
