--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -111,22 +111,22 @@ layout: default
 </div>
 -->
 	  
-	                  <div class="row no-gutter mt-0 col-lg-8 mx-auto text-center"> 
+	                  <div class="row no-gutter mt-0 col-lg-8 mx-auto"> <center>
                     <div class="col-md-2"> 
 			    <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Interactive Fiction</p> 
                     </div>                     
-                    <div class="col-md-auto"> 
+                    <div class="col-md-2"> 
                         <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Choose Your Own Adventure</p> 
                     </div>  
-                    <div class="col-md-auto"> 
+                    <div class="col-md-2"> 
                         <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Narrative Adventure</p> 
                     </div>  
-                    <div class="col-md-auto"> 
+                    <div class="col-md-2"> 
                         <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Strategy</p> 
                     </div>                     
-                    <div class="col-md-auto"> 
+                    <div class="col-md-2"> 
                         <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Political Simulator</p> 
-                    </div>                     
+				  </div>       </center>              
                 </div>       
            
 <div class="container">
