--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -111,7 +111,7 @@ layout: default
 </div>
 -->
 	  
-	                  <div class="row mt-0 col-lg-8 mx-auto"> <center>
+	                  <div class="row mt-0 col-lg-8 mx-auto">
                     <div class="col-md-2"> 
 			    <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Interactive Fiction</p> 
                     </div>                     
@@ -126,7 +126,7 @@ layout: default
                     </div>                     
                     <div class="col-md-2"> 
                         <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Political Simulator</p> 
-				  </div>       </center>              
+				  </div>               
                 </div>       
            
 <div class="container">
