--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -113,19 +113,19 @@ layout: default
 	  
 	                  <div class="row mt-0 col-lg-8 mx-auto">
                     <div class="col-md-2"> 
-			    <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Interactive Fiction</p> 
+			    <p class="tag text-gold text-center" style="background-color: rgba(0, 0, 0);">Interactive Fiction</p> 
                     </div>                     
-                    <div class="col-md-2"> 
-                        <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Choose Your Own Adventure</p> 
+                    <div class="col-md-3"> 
+                        <p class="tag text-gold text-center" style="background-color: rgba(0, 0, 0);">Choose Your Own Adventure</p> 
                     </div>  
                     <div class="col-md-2"> 
-                        <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Narrative Adventure</p> 
+                        <p class="tag text-gold text-center" style="background-color: rgba(0, 0, 0);">Narrative Adventure</p> 
                     </div>  
                     <div class="col-md-2"> 
-                        <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Strategy</p> 
+                        <p class="tag text-gold text-center" style="background-color: rgba(0, 0, 0);">Strategy</p> 
                     </div>                     
                     <div class="col-md-2"> 
-                        <p class="tag text-gold" style="background-color: rgba(0, 0, 0);">Political Simulator</p> 
+                        <p class="tag text-gold text-center" style="background-color: rgba(0, 0, 0);">Political Simulator</p> 
 				  </div>               
                 </div>       
            
