--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -110,7 +110,7 @@ layout: default
   </div>
 </div>
 -->
-	  
+	    <div class="container">
 	                  <div class="row mt-0 col-lg-8 mx-auto">
                     <div class="col-md-2"> 
 			    <p class="tag text-gold text-center" style="background-color: rgba(0, 0, 0);">Interactive Fiction</p> 
@@ -128,6 +128,7 @@ layout: default
                         <p class="tag text-gold text-center" style="background-color: rgba(0, 0, 0);">Political Simulator</p> 
 				  </div>               
                 </div>       
+		         </div>      
            
 <div class="container">
     <div class="row">
