--- a/assets/main.css
+++ b/assets/main.css
@@ -478,7 +478,7 @@ footer .copyright{
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
   background-color: transparent; /* Set a background color */
-  color: white; /* Text color */
+  color: #fff; /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
   padding: 15px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
