--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -111,7 +111,7 @@ layout: default
 </div>
 -->
 
-	                  <div class="row mt-0 col-lg-8 mx-auto text-center">
+	                  <div class="row mt-0 col-lg-8 mx-auto text-justify">
                     <div class="col-md-2"> 
 			    <p class="tag text-gold text-center" style="background-color: rgba(0, 0, 0);">Interactive Fiction</p> 
                     </div>                     
