--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -110,8 +110,8 @@ layout: default
   </div>
 </div>
 -->
-
-	                  <div class="row mt-0 col-lg-8 mx-auto text-justify">
+  <div class="container">
+	                  <div class="row">
                     <div class="col-md-2"> 
 			    <p class="tag text-gold text-center" style="background-color: rgba(0, 0, 0);">Interactive Fiction</p> 
                     </div>                     
