--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@ layout: default
 	  
             <div class="container">
                 <div class="row text-center col-auto">
-               <div class="subscription-form-input">
+               <div class="subscription-form-input col-9 mx-auto">
                     <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/e3bbda51" method="POST">  
 			    
                               <input name="email" class="email_type emai" id="email" data-label="E-mail" placeholder="Your e-mail" required>
