--- a/assets/main.css
+++ b/assets/main.css
@@ -27,26 +27,6 @@ a{
 a:focus,a:hover:not(.list-inline-item){
 	color:#fff
 }
-
-#topbutton {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: transparent; /* Set a background color */
-  color: #fff; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 50px; /* Increase font size */
-}
-
-#topbutton:hover {
-  background-color: #555; /* Add a dark-grey background on hover */
-}
 blockquote{
 	font-style:italic;
 	color:#868e96
@@ -497,6 +477,25 @@ footer .copyright{
 	font-size:16px;
 	padding:25px 35px
 }
+#topbutton {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: transparent; /* Set a background color */
+  color: #fff; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 50px; /* Increase font size */
+}
+
+#topbutton:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
 
 .fa-discord {
  padding-top:7%;
@@ -634,16 +633,25 @@ padding-top: 2px;
     }
     .sender-link {
         font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-        font-size: 12px;
+        font-size: 1em;
         text-decoration: none !important;
         color: #555;
     }
     .sender-link img {
-        width: 14px;
-        height: 14px;
+        width: 0.92em;
+        height: 0.92em;
         margin-right: 2px;
         vertical-align: text-bottom;
     }
+	@media (max-width: 768px){
+    .sender-link {
+        font-size: 0.8em;
+    }
+    .sender-link img {
+        width: 0.8em;
+        height: 0.8em;
+    }
+}
     .emai {
 	    border: 2px solid #000;
         -webkit-border-radius: 3px;
