--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@ layout: default
   </header>
 	  
             <div class="container">
-                <div class="row text-center">
+                <div class="row text-md-center text-lg-center text-xl-center">
                     <div class="col-9 mx-auto">
 			<h4 class="font-weight-bold text-h0">What would it be like to walk in the sandals of a Pharaoh?</h4>
                         <p>You won't know until you unite Egypt — only the rulers of both Upper and Lower Egypt can be called as such, and, as of now, Egypt is shattered! Take the reins of this chariot on its way to the otherworld, restore the order, and build the great pyramid to preserve your legacy! But it's not going to be easy. The priests are breathing down your neck, the enemies are on a war footing, the noblemen are out of line, and, on top of all that, the God's Wife must be chosen swiftly, lest no heir is left to the throne...
@@ -34,7 +34,7 @@ layout: default
                 </div>
 	  
             <div class="container">
-                <div class="row text-center col-auto">
+                <div class="row text-md-center text-lg-center text-xl-center col-auto">
                <div class="subscription-form-input col-9 mx-auto">
                     <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/e3bbda51" method="POST">  
 			    
