--- a/assets/main.css
+++ b/assets/main.css
@@ -438,6 +438,16 @@ header.masthead .post-heading .meta{
 header.masthead .post-heading .meta a{
 	color:#fff
 }
+@media only screen and (max-width: 575.98px){
+     header.masthead {
+     height: 88px;
+}
+header.masthead .page-heading,header.masthead .post-heading,header.masthead .site-heading{
+	text-align:left;
+	padding:0px 0 0px;
+        margin-left:-20px;
+}
+}
 @media only screen and (min-width: 768px){
 	header.masthead .post-heading h1{
 		font-size:55px
