--- a/assets/main.css
+++ b/assets/main.css
@@ -135,6 +135,10 @@ padding-top: 2px;
 }
 
 .subscription-form-input {
+ padding: 0
+}
+@media only screen and (min-width: 576px){
+.subscription-form-input {
         display: inline-block;
         padding: 14px;
         font-size: 15px;
@@ -147,6 +151,7 @@ padding-top: 2px;
         margin-bottom: 0px;
 	margin-top: 8px;
     }
+}
     .subscription-form .checkbox_label {
         display: inline-block;
         line-height: 20px;
@@ -201,6 +206,7 @@ padding-top: 2px;
     .sender-link img {
         width: 0.75em;
         height: 0.75em;
+        vertical-align:middle;
     }
 }
     .emai {
