--- a/assets/main.css
+++ b/assets/main.css
@@ -386,10 +386,12 @@ header.masthead .overlay{
 	opacity:0.1
 }
 }
+@media (min-width:1200px){
 header.masthead .page-heading,header.masthead .post-heading,header.masthead .site-heading{
 	padding:37px 0 0px;
 	color:#FBC403;
 	text-align:center;
+}
 }
 @media only screen and (min-width: 768px){
 header.masthead .page-heading>h1{
@@ -415,7 +417,7 @@ header.masthead .page-heading .subheading,header.masthead .site-heading .subhead
 	-webkit-text-stroke-color: white;
 }
 	}
-@media only screen and (min-width: 768px) and (max-width: 1200px) {
+@media only screen and (min-width: 768px) and (max-width: 1199.98px) {
 header.masthead .page-heading,header.masthead .post-heading,header.masthead .site-heading{
 	text-align:center;
 	padding:60px 0 0px;
