--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-10 col-xs-12 mx-auto">
+      <div class="col-lg-8 col-md-10 col-xs-12 mx-auto text-center">
         <ul class="list-inline text-center">
           {% if site.steam_creator_page %}
           <li class="list-inline-item">
