--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,8 +35,8 @@ layout: default
                 </div>
 	  
             <div class="container">
-                <div class="row text-center col-auto">
-               <div class="subscription-form-input col-9 mx-auto">
+                <div class="row text-md-center text-lg-center text-xl-center col-auto">
+               <div class="subscription-form-input col-9 col-xs-12 mx-auto ml-xs-0 ml-sm-0">
                     <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/e3bbda51" method="POST">  
 			    
                               <input name="email" class="email_type emai" id="email" data-label="E-mail" placeholder="Your e-mail" required>
