--- a/assets/main.css
+++ b/assets/main.css
@@ -138,7 +138,7 @@ padding-top: 2px;
  	padding: 0;
 	margin-top: 1px;
 }
-@media only screen and (min-width: 576px){
+@media only screen and (min-width: 489.98px){
 .subscription-form-input {
         display: inline-block;
         padding: 14px;
@@ -315,6 +315,9 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 @media only screen and (min-width: 490px){
 	.container .div .div p {
 	text-align: justify;	
+	}
+	.container div div h4, .container div div h5 {
+	text-align: center;	
 	}
 }
 
