--- a/assets/main.css
+++ b/assets/main.css
@@ -318,6 +318,7 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 	}
 	.container div div h4, .container div div h5 {
 	text-align: center;	
+	margin-top:1em; 
 	}
 }
 
