--- a/assets/main.css
+++ b/assets/main.css
@@ -316,7 +316,7 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 	.container .div .div p {
 	text-align: justify;	
 	}
-	.container div div h4, .container div div h5, .container div div .emai, .sender-link-wrapper{
+	.container div div h4, .container div div h5, .container div div .emai, .sender-link{
 	display: block;
 	margin: 1em auto 0;
 	}
