--- a/assets/main.css
+++ b/assets/main.css
@@ -173,6 +173,7 @@ padding-top: 2px;
         border: none;
 	font-size: 24px;
 	color: #fdb245;
+        margin-bottom: -3px;
 	vertical-align: middle;
     width: 22px;	
   background-color: transparent;
