--- a/assets/main.css
+++ b/assets/main.css
@@ -169,7 +169,9 @@ padding-top: 2px;
         font-size: 14px;
     }
     .subscription-form-input button {
-        padding: 0 0 4px -3px;
+padding: 0px;
+padding-bottom: 4px;
+padding-left: -3px;
         text-align: center;
         border: none;
 	font-size: 24px;
