--- a/assets/main.css
+++ b/assets/main.css
@@ -330,6 +330,9 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 	padding:2px 0 0px;
         margin-left:-20px;
 }
+        .card-body .small{
+        font-size: 100%;
+}
 }
 
 @media only screen and (min-width: 992px){
