--- a/assets/main.css
+++ b/assets/main.css
@@ -318,7 +318,10 @@ header.masthead .page-heading,header.masthead .post-heading,header.masthead .sit
 }
 
 @media only screen and (min-width: 490px) and (max-width: 766.98px){
-	.container .div .div p {
+	#mainNav{
+        background:linear-gradient(to right,transparent,75%,black)
+        }
+        .container .div .div p {
 	text-align: justify;	
 	}
 	.container div div h4, .container div div h5{
