--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,7 +54,7 @@ layout: default
 
   <div class="container">
                 <div class="row mt-3"> 
-                    <div class="col-md-4 mb-3 mb-md-5"> 
+                    <div class="col-md-4 cpad mb-3 mb-md-5"> 
                           <div class="card py-4 h-100"> 
                              <div class="card-body text-center"> 
                                 <i class="fas fa-scroll bigicon pt-3 pb-3"></i> 
@@ -64,7 +64,7 @@ layout: default
                             </div>                             
                         </div>                         
                     </div>
-			<div class="col-md-4 mb-3 mb-md-5"> 
+			<div class="col-md-4 cpad mb-3 mb-md-5"> 
                         <div class="card py-4 h-100"> 
                             <div class="card-body text-center"> 
                                 <i class="fas fa-redo-alt bigicon pt-3 pb-3"></i>
@@ -74,7 +74,7 @@ layout: default
                             </div>                             
                         </div>                         
                     </div>      
-                    <div class="col-md-4 mb-3 mb-md-5"> 
+                    <div class="col-md-4 cpad mb-3 mb-md-5"> 
                         <div class="card py-4 h-100"> 
                             <div class="card-body text-center"> 
                                 <i class="fas fa-capsules bigicon pt-3 pb-3"></i> 
