--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="col-md-10 mx-auto">
           <div class="page-heading">
 	   <img src="/img/egypt.png">
             <!-- <h1>EGYPT: Shattered Order</h1>
